# crc-utils

./: .clang-format  CMakeLists.txt  adler32.cpp  common.hpp  crc32.cpp  parser.hpp
src/: common.hpp  parser.hpp
targets/adler32/: main.cpp
targets/crc32/: main.cpp
